# utf64

./: Cargo.toml  README.md  utf64.c  utf64.cs  utf64.go  utf64.java  utf64.js  utf64.kt  utf64.lua  utf64.php  utf64.py  utf64.rb  utf64.rs  utf64.swift  utf64.wat
Compiled ports/: utf64  utf64.wasm  utx64
src/: lib.rs  main.rs
